--- a/Project1/Base.lproj/Main.storyboard
+++ b/Project1/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23721"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -44,6 +45,35 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1tx-6a-I15" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="834.35114503816794" y="-68.309859154929583"/>
+        </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="T4k-2H-2Dp">
+            <objects>
+                <viewController storyboardIdentifier="Detail" id="gAL-KS-eKv" customClass="DetailViewController" customModule="Project1" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="xkn-c3-7oH">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fHg-cp-Ecy">
+                                <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                            </imageView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="L9N-fR-ieR"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="bottomMargin" secondItem="fHg-cp-Ecy" secondAttribute="bottom" constant="-68" id="2AD-Rz-4F1"/>
+                            <constraint firstItem="fHg-cp-Ecy" firstAttribute="centerY" secondItem="xkn-c3-7oH" secondAttribute="centerY" id="fbf-jt-Q65"/>
+                            <constraint firstItem="fHg-cp-Ecy" firstAttribute="centerX" secondItem="xkn-c3-7oH" secondAttribute="centerX" id="n3K-k7-S1o"/>
+                            <constraint firstItem="fHg-cp-Ecy" firstAttribute="leading" secondItem="L9N-fR-ieR" secondAttribute="leading" id="zrN-Zm-Q9z"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="imageView" destination="fHg-cp-Ecy" id="Y5w-El-zPF"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="efs-Ny-SGO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1710.6870229007634" y="-65.492957746478879"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="RRg-JC-Fzo">
